Message completed as designed. (Possible to be changed)

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,6 @@ dependencies {
 	// QueryDSL
 	implementation 'com.querydsl:querydsl-jpa'
 	implementation 'com.querydsl:querydsl-apt'
-	
 
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	
@@ -73,13 +72,13 @@ querydsl {
 }
 
 
-//sourceSets {
-// main {
-// 	java {
-// 		srcDirs = ['src/main/java', querydslDir]
-// 		}
-//	}
-//}
+sourceSets {
+ main {
+ 	java {
+ 		srcDirs = ['src/main/java', querydslDir]
+ 		}
+	}
+}
 
 
 configurations {
