build.gradle 주석해제

--- a/build.gradle
+++ b/build.gradle
@@ -73,13 +73,14 @@ querydsl {
 }
 
 
-//sourceSets {
-// main {
-// 	java {
-// 		srcDirs = ['src/main/java', querydslDir]
-// 		}
-//	}
-//}
+sourceSets {
+ main {
+ 	java {
+ 		srcDirs = ['src/main/java', querydslDir]
+ 		}
+	}
+}
+
 
 
 configurations {
