--- a/build.gradle
+++ b/build.gradle
@@ -72,13 +72,13 @@ querydsl {
 }
 
 
-sourceSets {
- main {
- 	java {
- 		srcDirs = ['src/main/java', querydslDir]
- 		}
-	}
-}
+//sourceSets {
+// main {
+// 	java {
+//		srcDirs = ['src/main/java', querydslDir]
+//		}
+//	}
+//}
 
 
 configurations {
