--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
 	
 	// jwt
 	implementation group: 'com.auth0', name: 'java-jwt', version: '3.15.0'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
+	
 	
 }
 
