--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,8 @@ dependencies {
 	// jwt
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
 	
-	
+	// validation
+	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 }
 
 test {
