dependecy 에 validator 변경  dto 정리및 수정 login 컨트롤러 수정 유저 서비스 임플 디티어 스정

--- a/build.gradle
+++ b/build.gradle
@@ -55,8 +55,8 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
 	
 	// validation
-	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-	
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	//Thumbnailator
 	implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
 }
