--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	
+	//mustache
+	implementation 'org.springframework.boot:spring-boot-starter-mustache'
+	
 	// Lombok
 	implementation "org.projectlombok:lombok"
 	annotationProcessor ("org.projectlombok:lombok")
